@@ -4,7 +4,7 @@ plugins {
 }
 
 mainClassName = 'mqttloader.Loader'
-applicationDefaultJvmArgs = ['-Djava.util.logging.config.file=logging.properties', '-Dfile.encoding=UTF-8']
+applicationDefaultJvmArgs = ['-Djava.util.logging.config.file=src/dist/logging.properties', '-Dfile.encoding=UTF-8', '--illegal-access=deny']
 
 repositories {
     mavenCentral()
@@ -19,4 +19,14 @@ dependencies {
 
 run {
     args '-h'.split('\\s+')
+}
+
+CreateStartScripts startScripts = project.startScripts
+startScripts.with {
+    doLast {
+        unixScript.text = unixScript.text.replaceFirst('-Djava.util.logging.config.file=src/dist/logging.properties',
+                '-Djava.util.logging.config.file=\\$APP_HOME/logging.properties')
+        windowsScript.text = windowsScript.text.replaceFirst('-Djava.util.logging.config.file=src/dist/logging.properties',
+                '-Djava.util.logging.config.file=%~dp0../logging.properties')
+    }
 }
